k8s/frontend/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energytruth-frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
        env:
        - name: BACKEND_URL
          value: "http://energytruth-backend-service:80"
