k8s/frontend/overlays/test/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: energytruth-frontend-service
spec:
  ports:
    - port: 80
      targetPort: 80
